<project xmlns="http://maven.apache.org/POM/4.0.0" 
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.example</groupId>
  	<artifactId>clock</artifactId>
  	<version>2.8</version>
  	<name>Clock</name>
    <description>This is a simple Clock GUI which displays the date and time, and can set alarms and timers.</description>
    
    <properties>
		<java.version>18</java.version>
		<outputDirectory>${basedir}/dist/${project.name}</outputDirectory>
		<finalName>${project.artifactId}-${project.version}</finalName>

    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.version>3.11.0</maven.compiler.version>
		<maven.properties.version>1.0-alpha-2</maven.properties.version>
		<maven.jar.version>3.3.0</maven.jar.version>
		<maven.surefire.version>3.2.1</maven.surefire.version>
		<maven.assembly.version>3.6.0</maven.assembly.version>
		<log4j2.version>2.21.1</log4j2.version>
    </properties>

	<!-- NOTES -->
	<!-- Assembly:single creates Clock-v#.jar -->
	<!-- Mvn:package creates Clock-v#-jar-with-dependencies.jar -->
    
    <dependencies>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javazoom/jlayer -->
		<dependency>
			<groupId>javazoom</groupId>
			<artifactId>jlayer</artifactId>
			<version>1.0.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>0.8.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.9</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.0.0</version>
			<scope>test</scope>
		</dependency>
	
		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
		<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-module-junit4</artifactId>
		    <version>2.0.4</version>
		    <scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-assembly-plugin</artifactId>
			<version>${maven.assembly.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>${maven.jar.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>${maven.surefire.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.11.0</version>
			<scope>test</scope>
		</dependency>


	</dependencies>
    
    <build>
		<sourceDirectory>src/main/java</sourceDirectory>
    	<testSourceDirectory>src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/**</include>
					<!--<include>**/sounds/*.mp3</include>-->
				</includes>
			</resource>
		</resources>

		<plugins>

			<!-- Compile -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<release>18</release>
					<compilerArgs>
						<!--<arg>#doubledash#enable-preview</arg>-->
						<arg>-verbose</arg>
						<arg>-Xlint:all,-options,-path</arg>
					</compilerArgs>
                    <source>18</source>
                    <target>18</target>
                    <!-- for surefire plugin -->
				</configuration>
				<executions>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<configuration>
							<testExcludes>
								<exclude>**/**.java</exclude>
							</testExcludes>
						</configuration>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Test-compile -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.version}</version>
				<configuration>
					<excludes>
						<exclude>**/**.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Binds to Package phase, but will not run... -->
            <!-- When creating a jar, update MANIFEST.MF file and place JAR in specified outputDirectory -->
            <plugin>
            	<groupId>org.apache.maven.plugins</groupId>
            	<artifactId>maven-jar-plugin</artifactId>
            	<version>${maven.jar.version}</version>
            	<executions>
            		<execution>
            			<id>default-jar</id>
            			<phase>compile</phase>
            			<goals>
            				<goal>jar</goal>
            			</goals>
            		</execution>
            	</executions>
            	<configuration>
					<finalName>Clock-v${project.version}</finalName>
					<outputDirectory>${basedir}/dist</outputDirectory>
					<archive>
						<index>true</index>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addClasspath>true</addClasspath>
							<mainClass>org.example.clock.Main</mainClass>
						</manifest>
						<manifestEntries>
							<Implementation-Version>${project.version}</Implementation-Version>
							<Creation-Time-Format>yyyy-MM-dd HH:mm:ss</Creation-Time-Format>
							<!--suppress UnresolvedMavenProperty -->
							<Creation-Time>${build.time}</Creation-Time>
							<mainClass>org.example.clock.Main</mainClass>
						</manifestEntries>
					</archive>
					<includes>
						<include>**/Clock/*</include>
						<include>**/sounds/*</include>
						<include>**/logging/*</include>
					</includes>
					<excludes>
						<exclude>**/**.java</exclude>
					</excludes>
            	</configuration>
            </plugin>
            
<!--            <plugin>-->
<!--            	<groupId>org.apache.maven.plugins</groupId>-->
<!--            	<artifactId>maven-antrun-plugin</artifactId>-->
<!--            	<executions>-->
<!--            		<execution>-->
<!--            			<phase>initialize</phase>-->
<!--            			<goals>-->
<!--            				<goal>run</goal>-->
<!--            			</goals>-->
<!--            			<configuration>-->
<!--            				<tasks>-->
<!--            					<mkdir dir="${project.build.directory}"/>-->
<!--            					<tstamp>-->
<!--									<format property="last.updated" pattern="yyyy-MM-dd HH:mm:ss"/>-->
<!--            					</tstamp>-->
<!--            					&lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
<!--								<echo file="${basedir}/dist/build.properties" message="build.time=${last.updated}"/>-->
<!--            				</tasks>-->
<!--            			</configuration>-->
<!--            		</execution>-->
<!--            	</executions>-->
<!--            </plugin>-->

			<!-- Package: creates runnable jar with dependencies -->
            <plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-assembly-plugin</artifactId>
				 <version>${maven.assembly.version}</version>
                 <executions>
                     <execution>
						 <phase>package</phase>
						 <goals>
							 <goal>single</goal>
						 </goals>
					 </execution>
				 </executions>
				 <configuration>
					 <finalName>Clock-v${project.version}</finalName>
					 <outputDirectory>${basedir}/dist</outputDirectory>
					 <descriptorRefs>
						 <descriptorRef>jar-with-dependencies</descriptorRef>
					 </descriptorRefs>
					 <archive>
						 <index>true</index>
						 <manifest>
							 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							 <addClasspath>true</addClasspath>
							 <mainClass>org.example.clock.Main</mainClass>
						 </manifest>
						 <manifestEntries>
							 <Implementation-Version>${project.version}</Implementation-Version>
							 <Creation-Time-Format>yyyy-MM-dd HH:mm:ss</Creation-Time-Format>
							 <!--suppress UnresolvedMavenProperty -->
							 <Creation-Time>${build.time}</Creation-Time>
							 <mainClass>org.example.clock.Main</mainClass>
						 </manifestEntries>
					 </archive>
				 </configuration>
			</plugin>
		    
        </plugins>
        
    </build>
    
</project>
